★★ 버전2 업그레이드!!

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <a class="nav-link js-scroll-trigger" href="#whyhow">특허 검색은 왜? 그리고 어떻게?</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#mechanism">작동방식</a>
+            <a class="nav-link js-scroll-trigger" href="#solution">솔루션</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">다양한 기능</a>
+            <a class="nav-link js-scroll-trigger" href="#mechanism">작동방식</a>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#blog">블로그</a>
@@ -171,11 +171,48 @@
     </div>
   </section>
 
-  <!--Mechanism Section-->
-  <section id="mechanism">
-    <div class="container py-5 px-3">
-      <div class="row">
-        <div class="col-12">
+  
+
+  <!-- Solution section -->
+  <section id="solution" class="bg-white">
+    <div class="container py-4 bg-white">
+
+      <div class="row no-gutters py-4">
+
+        <div class="col-12 col-md-6 text-center p-3 order-2 order-md-1" data-aos="fade-up">
+          <img src="../img/solution/application.png" alt="특허 명세서" style="width: 100%;">
+        </div>
+        <div class="col-12 col-md-6 order-1 order-md-2 py-md-3 px-md-5" data-aos="fade-up">
+          <h2 class="py-3">‘‘검색 범위를 선택하자.’’</h2>
+          <div class="px-2">
+            <p><b>검색>요약>청구항</b> 순서로 특허 문서 전체의 내용이 함축되어 있습니다.</p>
+            <p><b>제목</b>(발명의 명칭)은 특허의 카테고리로 볼 수도 있으며, <b>요약</b>에는 구성요소뿐만 아니라 특허의 목적도 포함되어 있을 수 있습니다.</p>
+            <p>필드마다 검색되어야 할 단어를 지정해 주는 것만으로도 <b>정확도를 높히면서 검색량을 줄일 수 있습니다.</b></p>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 order-3 py-md-3 px-md-5" data-aos="fade-up">
+          <h2 class="py-3">‘‘숨어 있는 특허를 찾자.’’</h2>
+          <div class="px-2">
+            <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
+            <p>'display'를 어떤 문서에선 '디스플<b>레</b>이'로, 또 어떤 문서에선 '디스플<b>래</b>이'로 표현할 수 있습니다.</p>
+            <p>키프리스에서 "플<b>렉</b>서블 디스플레이"로 검색한 결과와 "플<b>랙</b>서블 디스플레이"로 검색한 결과를 비교해 보세요.</p>
+            <p>아마 검색 <b>결과가 다를 것입니다.</b> 그래서 동의어는 OR 연산자로, 동의어 집합은 AND 연산자로 <b>연결해 주어야 합니다.</b></p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 text-center p-3 order-4" data-aos="fade-up">
+          <img class="shadow-right" src="./img/solution/synonym.png" alt="특허 동의어" style="width: 100%;">
+        </div>
+
+        <div id="mechanism" class="col-12 order-5">
+          <h2 class="py-3 text-center">‘‘이 모든 것을 클릭 몇 번으로 해결’’</h2>
+          <p><b>키워드별로</b> 동의어를 입력할 수 있는 에디터가 생성됩니다.</p>
+          <p><b>동의어 집합별로</b> 제목, 요약, 청구항 필드를 선택할 수 있습니다.</p>
+          <p>모든 단어는 <b>태그처리</b>되어 있어 <b>가독성</b>이 좋아졌고, 마우스 왼쪽 버튼으로 <b>편집</b>할 수 있고, 오른쪽 버튼으로 <b>삭제</b>할 수 있습니다.</p>
+          <p><b>검색식은 자동으로 생성</b>되며, 생성된 검색식도 직접 입력할 필요가 없습니다. '특허 검색' 버튼을 누르면, <b>자동으로 웹브라우저에 검색 결과가 표시됩니다.</b></p>
+        </div>
+
+        <div class="col-12 order-6">
           <div class="owl-carousel">
             <div class="item">
               <img src="./img/mechanism/1.png" alt="patent search">
@@ -195,12 +232,14 @@
             <div class="item">
               <img src="./img/mechanism/6.png" alt="patent search">
             </div>
-          </div>  
+          </div>
         </div>
-        
+
+      </div>
+    </div>
   </section>
 
-  <!-- Features Section -->
+  <!-- Features Section 
   <section id="features" class="bg-light">
     <div class="container py-4 bg-light">
       <div class="row no-gutters mb-0">
@@ -261,7 +300,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!-- Blog Section 
   <section class="py-5 bg-light mt-0" id="blog">
@@ -392,9 +431,9 @@
   </section>-->
 
   <!-- Install Section -->
-  <section id="install">
-    <div class="container-fluid page-section bg-white">
-      <div class="row no-gutters py-3 pb-md-5" data-aos="fade-up">
+  <section id="install" class="bg-light">
+    <div class="container-fluid page-section bg-light">
+      <div class="row no-gutters pt-5 pb-3 pb-md-5" data-aos="fade-up">
         <div class="col-lg-6 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
