--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
   <!-- Install Section -->
   <section id="install" class="bg-light">
     <div class="container-fluid page-section bg-light">
-      <div class="row no-gutters pt-5 pb-3 pb-md-5" data-aos="fade-up">
+      <div class="row no-gutters py-3 py-md-5" data-aos="fade-up">
         <div class="col-lg-6 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
