--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 order-3 py-md-3 px-md-5" data-aos="fade-up">
+        <div class="col-12 col-md-6 order-3 pt-5 py-md-3 px-md-5" data-aos="fade-up">
           <h2 class="py-3">‘‘숨어 있는 특허를 찾자.’’</h2>
           <div class="px-2">
             <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
@@ -204,7 +204,7 @@
           <img class="shadow-right" src="./img/solution/synonym.png" alt="특허 동의어" style="width: 100%;">
         </div>
 
-        <div id="mechanism" class="col-12 order-5">
+        <div id="mechanism" class="col-12 order-5 pt-5 pt-md-3">
           <h2 class="py-3 text-center">‘‘이 모든 것을 클릭 몇 번으로 해결’’</h2>
           <p><b>키워드별로</b> 동의어를 입력할 수 있는 에디터가 생성됩니다.</p>
           <p><b>동의어 집합별로</b> 제목, 요약, 청구항 필드를 선택할 수 있습니다.</p>
