--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="col-12 col-md-6 text-center p-3 order-2 order-md-1" data-aos="fade-up">
           <img src="../img/solution/application2.png" alt="특허 명세서" style="width: 100%;">
         </div>
-        <div class="col-12 col-md-6 order-1 order-md-2 py-md-3 px-md-5" data-aos="fade-up">
+        <div class="col-12 col-md-6 order-1 order-md-2 py-md-3 px-md-5">
           <h2 class="py-3">‘‘검색 범위를 선택하자.’’</h2>
           <div class="px-2">
             <p><b>검색>요약>청구항</b> 순서로 특허 문서 전체의 내용이 함축되어 있습니다.</p>
@@ -191,7 +191,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 order-3 pt-5 py-md-3 px-md-5" data-aos="fade-up">
+        <div class="col-12 col-md-6 order-3 pt-5 py-md-3 px-md-5">
           <h2 class="py-3">‘‘숨어 있는 특허를 찾자.’’</h2>
           <div class="px-2">
             <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
@@ -212,7 +212,7 @@
           <p><b>검색식은 자동으로 생성</b>되며, 생성된 검색식도 직접 입력할 필요가 없습니다. '특허 검색' 버튼을 누르면, <b>자동으로 웹브라우저에 검색 결과가 표시됩니다.</b></p>
         </div>
 
-        <div class="col-12 order-6">
+        <div class="col-12 order-6" data-aos="fade-up">
           <div class="owl-carousel">
             <div class="item">
               <img src="./img/mechanism/1.png" alt="patent search">
