--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <img src="../img/solution/application2.png" alt="특허 명세서" style="width: 100%;">
         </div>
         <div class="col-12 col-md-6 order-1 order-md-2 py-md-3 px-md-5">
-          <h2 class="py-3">‘‘검색 범위를 선택하자.’’</h2>
+          <h2 class="py-3"><b>‘‘검색 범위를 선택하자.’’</b></h2>
           <div class="px-2">
             <p><b>검색>요약>청구항</b> 순서로 특허 문서 전체의 내용이 함축되어 있습니다.</p>
             <p><b>제목</b>(발명의 명칭)은 특허의 카테고리로 볼 수도 있으며, <b>요약</b>에는 구성요소뿐만 아니라 특허의 목적도 포함되어 있을 수 있습니다.</p>
@@ -192,7 +192,7 @@
         </div>
 
         <div class="col-12 col-md-6 order-3 pt-5 py-md-3 px-md-5">
-          <h2 class="py-3">‘‘숨어 있는 특허를 찾자.’’</h2>
+          <h2 class="py-3"><b>‘‘숨어 있는 특허를 찾자.’’</b></h2>
           <div class="px-2">
             <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
             <p>'display'를 어떤 문서에선 '디스플<b>레</b>이'로, 또 어떤 문서에선 '디스플<b>래</b>이'로 표현할 수 있습니다.</p>
@@ -205,7 +205,7 @@
         </div>
 
         <div id="mechanism" class="col-12 order-5 pt-5 pt-md-3">
-          <h2 class="py-3 text-center">‘‘이 모든 것을 클릭 몇 번으로 해결’’</h2>
+          <h2 class="py-3 text-center"><b>‘‘이 모든 것을 클릭 몇 번으로 해결’’</b></h2>
           <p><b>키워드별로</b> 동의어를 입력할 수 있는 에디터가 생성됩니다.</p>
           <p><b>동의어 집합별로</b> 제목, 요약, 청구항 필드를 선택할 수 있습니다.</p>
           <p>모든 단어는 <b>태그처리</b>되어 있어 <b>가독성</b>이 좋아졌고, 마우스 왼쪽 버튼으로 <b>편집</b>할 수 있고, 오른쪽 버튼으로 <b>삭제</b>할 수 있습니다.</p>
