--- a/index.html
+++ b/index.html
@@ -442,13 +442,13 @@
           </div>
         </div>
         <div class="col-lg-6 px-3 px-lg-4 order-1 order-lg-2">
-          <h2 class="py-3" n="500" data-aos-delay="100"><span class="divider-v">|</span> <span>설치</span></h2>
+          <h2 class="py-3"><b>설치</b></h2>
           <p id="win10_warn" style="display: none;">
-            <b1>윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.</b1>
+            윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
           </p>
-          <p><b>마이크로소프트 스토어</b>를 통해 <b1>안전하게</b1> 설치됩니다.</p>
+          <p>마이크로소프트 스토어를 통해 안전하게 설치됩니다.</p>
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
-          <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
+          <p class="pb-3 pb-md-1">로그인 창이 뜨지만 그냥 닫아도 설치가 진행됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
           <div id="store-area2" class="row" data-aos="zoom-in">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
