--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
           </div>
         </div>
         <div class="col-lg-6 px-3 px-lg-4 order-1 order-lg-2">
-          <h2 class="py-3"><b>설치</b></h2>
+          <h2 class="py-3">설치</h2>
           <p id="win10_warn" style="display: none;">
             윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
           </p>
