--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
           </p>
           <p><b>마이크로소프트 스토어</b>를 통해 안전하게 설치됩니다.</p>
-          <p class="pb-3 pb-md-1">로그인 창이 뜨지만 그냥 닫아도 설치가 진행됩니다.</p>
+          <p class="pb-3">로그인 창이 뜨지만 그냥 닫아도 설치가 진행됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
           <div id="store-area2" class="row" data-aos="zoom-in">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
