--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </div>
     </div>
     <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="http://video_ko.ccpatents.net/bg.mp4" type="video/mp4">
+      <source src="http://video_ko.ccpatents.net/bg2.mp4" type="video/mp4">
     </video>
   </header>
 
