--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <h2 class="py-3 text-center"><b>‘‘이 모든 것을 클릭 몇 번으로 해결’’</b></h2>
           <p><b>키워드별로</b> 동의어를 입력할 수 있는 에디터가 생성됩니다.</p>
           <p><b>동의어 집합별로</b> 제목, 요약, 청구항 필드를 선택할 수 있습니다.</p>
-          <p>모든 단어는 <b>태그처리</b>되어 있어 <b>가독성</b>이 좋아졌고, 마우스 왼쪽 버튼으로 <b>편집</b>할 수 있고, 오른쪽 버튼으로 <b>삭제</b>할 수 있습니다.</p>
+          <p>모든 단어는 <b>태그처리</b>되어 있어 <b>가독성</b>이 좋아졌고, 마우스 왼쪽 버튼으로 <b>편집</b>할 수 있으며, 오른쪽 버튼으로 <b>삭제</b>할 수 있습니다.</p>
           <p><b>검색식은 자동으로 생성</b>되며, 생성된 검색식도 직접 입력할 필요가 없습니다. '특허 검색' 버튼을 누르면, <b>자동으로 웹브라우저에 검색 결과가 표시됩니다.</b></p>
         </div>
 
