header 동영상을 유튜브 동영상으로 변경

--- a/index.html
+++ b/index.html
@@ -151,16 +151,21 @@
         </div>
       </div>
     </div>
-    <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="http://video_ko.ccpatents.net/bg3.mp4" type="video/mp4">
-    </video>
+
+    <div class="video">
+      <div class="video-container">
+        <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/cYgknaxDQoI?rel=0&autoplay=1&loop=1&mute=1&playlist=cYgknaxDQoI"
+          frameborder="0" allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+    </div>
   </header>
 
   <!--Why Section-->
   <section id="why">
     <div class="container-fluid py-5 bg-light" data-aos="fade-up">
-      <div class="row d-flex align-items-center justify-content-center px-3">
-        <div class="text-center">
+      <div class="row px-3">
+        <div class="col-12 text-center">
           <h2>‘‘특허 검색 결과가 너무 많나요?’’</h2>
           <p>요약, 청구항 같은 <b>필드만 지정</b>해 주어도 <b>검색량을 확~ 줄일 수 있습니다.</b></p>
           <p><b>동의어를 입력</b>해 주면 검색 <b>범위를 넓힐 수 있습니다.</b></p>
@@ -170,8 +175,6 @@
       </div>
     </div>
   </section>
-
-  
 
   <!-- Solution section -->
   <section id="solution" class="bg-white">
