--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <div class="video">
       <div class="video-container">
-        <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/cYgknaxDQoI?rel=0&autoplay=1&loop=1&mute=1&playlist=cYgknaxDQoI"
+        <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/cYgknaxDQoI?rel=0&autoplay=1&loop=1&controls=0&mute=1&playlist=cYgknaxDQoI"
           frameborder="0" allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
