--- a/index.html
+++ b/index.html
@@ -143,10 +143,8 @@
             <!--<div id="socials" class="da-share-html da-fb da-tw"></div>-->
             <a id="kakao-link-btn" href="javascript:;">
               <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width="50px" /> </a>
-            <p class="mt-3">
-              <bw>윈도우10 전용</bw>
-            </p>
-            <p>다음에 사용해 보세요..</p>
+            <p class="mt-3">윈도우10에서</p>
+            <p>다운로드 버튼이 나타납니다.</p>
           </div>
         </div>
       </div>
