kwonjoondong 계정 구글 태그 추가

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     gtag('config', 'UA-149682898-1');
   </script>
 
+  <!-- Global site tag (gtag.js) - Google Ads: 669913813 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-669913813"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-669913813');
+  </script>
+
   <!-- Naver Web Mater Verification -->
   <meta name="naver-site-verification" content="6bc58c2f3e8161fe8df6acec8c1529ccff8c7495" />
 
