header 동영상 유뷰브 동영상에서 호스팅 동영상으로 변경

--- a/index.html
+++ b/index.html
@@ -147,13 +147,9 @@
       </div>
     </div>
 
-    <div class="video">
-      <div class="video-container">
-        <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/cYgknaxDQoI?rel=0&autoplay=1&loop=1&controls=0&mute=1&playlist=cYgknaxDQoI"
-          frameborder="0" allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-    </div>
+    <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+      <source src="http://video_ko.ccpatents.net/bg4.mp4" type="video/mp4">
+    </video>
   </header>
 
   <!--Why Section-->
