네비게이션에 동영상 추가

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
             <a class="nav-link js-scroll-trigger" href="#whyhow">특허 검색은 왜? 그리고 어떻게?</a>
           </li>-->
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://www.youtube.com/watch?v=lH-aHi7pb0I&list=PLY0SP3bVLmOhe8Dh2PDL1CFua2M-6ITeh" target="_blank">동영상</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#solution">솔루션</a>
           </li>
           <li class="nav-item">
