--- a/index.html
+++ b/index.html
@@ -143,14 +143,12 @@
             <p>마이크로소프트 스토어에서 안전하고 빠르게,</p>
           </div>
 
-          <div id="share" class="py-3" style="display: none">
+          <div id="share" class="py-3" style="display: none;">
             <!--<a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span><i class="fa fa-share"></i>&nbsp;기억해 두기</span></a>-->
             <!--<div id="socials" class="da-share-html da-fb da-tw"></div>-->
-            <div id="share-button">
-              <a id="kakao-link-btn" href="javascript:;">
-                <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width="50px" /> </a>
-              <p class="mt-3">윈도우10에서</p>
-            </div>
+            <a id="kakao-link-btn" href="javascript:;" onclick="share_click()">
+              <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width="50px" /> </a>
+            <p class="mt-3">윈도우10에서</p>
             <p>다운로드 버튼이 나타납니다.</p>
           </div>
         </div>
