--- a/index.html
+++ b/index.html
@@ -151,8 +151,15 @@
             <p class="mt-3">윈도우10에서</p>
             <p>다운로드 버튼이 나타납니다.</p>
           </div>
+
+          <div class="usecase d-none d-lg-block" style="position: absolute; bottom: 30px; left: 20px; z-index: 100;">
+            <a class="usecase-item" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
+            <!--<a class="usecase-item" data-aos="fade-right" data-aos-delay="1000" ata-aos-duration="2000">내 발명을 검색식으로 표현해 보자 ▷</a>-->
+          </div>
         </div>
+        
       </div>
+      
     </div>
 
     <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
