--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <img class="d-none d-md-block img-center mb-4 px-0" src="img/icon2.png" style="width: 65px;" />
           <h1 class="text-uppercase text-white font-weight-bold mb-4">Click Cl!ck Patents</h1>
           <h2 class="mb-4">특허 검색식 완성 도우미</h2>
-          <div class="youtube_video p-3" style="display: none;">
+          <div class="youtube_video p-3 d-md-none">
             <div class="video-container">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/lH-aHi7pb0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
@@ -157,9 +157,7 @@
             <!--<a class="usecase-item" data-aos="fade-right" data-aos-delay="1000" ata-aos-duration="2000">내 발명을 검색식으로 표현해 보자 ▷</a>-->
           </div>
         </div>
-        
       </div>
-      
     </div>
 
     <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
