--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
 
           <div class="usecase" style="position: absolute; bottom: 30px; left: 20px; z-index: 100;">
-            <a class="usecase-item" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
+            <a class="usecase-item" data-aos="fade-right" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
             <!--<a class="usecase-item" data-aos="fade-right" data-aos-delay="1000" ata-aos-duration="2000">내 발명을 검색식으로 표현해 보자 ▷</a>-->
           </div>
         </div>
