--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="px-2">
             <p><b>검색>요약>청구항</b> 순서로 특허 문서 전체의 내용이 함축되어 있습니다.</p>
             <p><b>제목</b>(발명의 명칭)은 특허의 카테고리로 볼 수도 있으며, <b>요약</b>에는 구성요소뿐만 아니라 특허의 목적도 포함되어 있을 수 있습니다.</p>
-            <p>필드마다 검색되어야 할 단어를 지정해 주는 것만으로도 <b>정확도를 높히면서 검색량을 줄일 수 있습니다.</b></p>
+            <p>필드마다 검색되어야 할 단어를 지정해 주는 것만으로도 <b>정확도를 높이면서 검색량을 줄일 수 있습니다.</b></p>
           </div>
         </div>
 
