--- a/index.html
+++ b/index.html
@@ -186,10 +186,11 @@
 
       <div class="row no-gutters py-4">
 
-        <div class="col-12 col-md-4 col-lg-6 text-center p-3 order-2 order-md-1" data-aos="fade-up">
-          <img src="../img/solution/application2.png" alt="특허 명세서" style="width: 100%;">
+        <div class="col-12 col-lg-6 text-center p-3 order-2 order-lg-1 row d-flex align-items-center" data-aos="fade-up">
+          <div class="col-3 col-lg-0"></div>
+          <img class="col-6 col-lg-12" src="../img/solution/application2.png" alt="특허 명세서">
         </div>
-        <div class="col-12 col-md-8 col-lg-6 order-1 order-md-2 py-md-3 px-md-5">
+        <div class="col-12 col-lg-6 order-1 order-lg-2 py-md-3 px-md-5">
           <h2 class="py-3"><b>‘‘검색 범위를 선택하자.’’</b></h2>
           <div class="px-2">
             <p><b>검색>요약>청구항</b> 순서로 특허 문서 전체의 내용이 함축되어 있습니다.</p>
@@ -198,7 +199,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-8 col-lg-6 order-3 pt-5 py-md-3 px-md-5">
+        <div class="col-12 col-lg-6 order-3 pt-5 py-md-3 px-md-5">
           <h2 class="py-3"><b>‘‘숨어 있는 특허를 찾자.’’</b></h2>
           <div class="px-2">
             <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
@@ -207,8 +208,9 @@
             <p>아마 검색 <b>결과가 다를 것입니다.</b> 그래서 동의어는 OR 연산자로, 동의어 집합은 AND 연산자로 <b>연결해 주어야 합니다.</b></p>
           </div>
         </div>
-        <div class="col-12 col-md-4 col-lg-6 text-center p-3 order-4" data-aos="fade-up">
-          <img class="shadow-right" src="./img/solution/synonym.png" alt="특허 동의어" style="width: 100%;">
+        <div class="col-12 col-lg-6 text-center p-3 order-4 row" data-aos="fade-up">
+          <div class="col-3 col-lg-0"></div>
+          <img class="col-6 col-lg-12" class="shadow-right" src="./img/solution/synonym.png" alt="특허 동의어">
         </div>
 
         <div id="mechanism" class="col-12 order-5 pt-5 pt-md-3">
