--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <h2 class="mb-4">특허 검색식 완성 도우미</h2>
           <div class="youtube_video p-3 d-md-none">
             <div class="video-container">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/lH-aHi7pb0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/lH-aHi7pb0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" donotallowfullscreen></iframe>
             </div>
           </div>
           <div id="store-area1" class="mt-4 mb-3" style="display: none">
