--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
           <div class="usecase" style="position: absolute; bottom: 30px; left: 20px; z-index: 100;">
             <a class="usecase-item" data-aos="fade-right" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
-            <!--<a class="usecase-item" data-aos="fade-right" data-aos-delay="1000" ata-aos-duration="2000">내 발명을 검색식으로 표현해 보자 ▷</a>-->
+            <a class="usecase-item" data-aos="fade-right" data-aos-duration="1750" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221807420769" target="_blank">검색하고 싶은 아이디어를 말해주세요.</a>
           </div>
         </div>
       </div>
