--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="col-12 pt-md-5 mt-md-5 pt-lg-0 mt-lg-0">
           <img class="d-none d-md-block img-center mb-4 px-0" src="img/icon2.png" style="width: 65px;" />
           <h1 class="text-uppercase text-white font-weight-bold mb-4">Click Cl!ck Patents</h1>
-          <h2 class="mb-4">특허 검색식 완성 도우미</h2>
+          <h2 class="mb-4">특허 검색식 완성 프로그램</h2>
           <div class="youtube_video p-3 d-md-none">
             <div class="video-container">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/lH-aHi7pb0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" donotallowfullscreen></iframe>
