--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
           </div>
 
           <div class="usecase" style="position: absolute; bottom: 30px; left: 20px; z-index: 100;">
-            <a class="usecase-item" data-aos="fade-right" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
-            <a class="usecase-item" data-aos="fade-right" data-aos-duration="1750" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221807420769" target="_blank">검색하고 싶은 아이디어를 말해주세요.</a>
+            <a class="usecase-item" style="font-size: 11pt;" data-aos="fade-right" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
+            <a class="usecase-item" style="font-size: 10pt;" data-aos="fade-right" data-aos-duration="1750" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221680490250" target="_blank">Google Patents, 구글 검색엔진을 특허에 적용!</a>
           </div>
         </div>
       </div>
