--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <a class="usecase-item usecase-item-blue" style="font-size: 13pt;" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="750" href="https://blog.naver.com/ccpatents/221682474929" target="_blank">키프리스 vs Google Patents</a>
           </div>
 
-          <div class="usecase" style="position: absolute; top: 0; right: 20px; z-index: 100;">
+          <div class="usecase" style="position: absolute; top: 30px; right: 20px; z-index: 100;">
             <a class="usecase-item usecase-item-red" style="font-size: 13pt;" data-aos="fade-left" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221689711006" target="_blank">특허 검색, 직접해야 하는 이유</a>
             <!--<a class="usecase-item usecase-item-red" style="font-size: 10pt;" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221680490250" target="_blank">Google Patents, 구글 검색엔진을 특허에 적용!</a>-->
           </div>
