--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             <!--<div id="socials" class="da-share-html da-fb da-tw"></div>-->
             <a id="kakao-link-btn" href="javascript:;">
               <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width="50px" /> </a>
-            <p class="mt-3">윈도우10에서</p>
-            <p>다운로드 버튼이 나타납니다.</p>
+            <p class="mt-3"><b>윈도우10에서</b></p>
+            <p><b>다운로드 버튼이 나타납니다.</b></p>
           </div>
 
           <div class="usecase" style="position: absolute; bottom: 30px; left: 20px; z-index: 100;">
