--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
           <div class="usecase" style="position: absolute; top: 30px; right: 20px; z-index: 100;">
             <a class="usecase-item usecase-item-red" style="font-size: 13pt;" data-aos="fade-left" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221689711006" target="_blank">특허 검색, 직접해야 하는 이유</a>
-            <!--<a class="usecase-item usecase-item-red" style="font-size: 10pt;" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221680490250" target="_blank">Google Patents, 구글 검색엔진을 특허에 적용!</a>-->
+            <a class="usecase-item usecase-item-red" style="font-size: 10pt;" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221714991507" target="_blank">검색식을 사용해야 하는 이유</a>
           </div>
         </div>
       </div>
