--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <h3 class="col-12 text-center pt-5 pb-2">Step3. 특허 검색 및 반복</h3>
         <p class="col-12 text-center"><b>특허 검색 버튼</b>을 누르면 선택한 사이트로 검색식을 전달하고, <b>즉시 검색결과를 표시</b>해 줍니다.</p>
-        <p class="col-12 text-center"><b>‘마스크’</b>와 그 동의어들가 <b>제목에 반드시 포함</b>되도록 검색했더니 <b>746개가 검색</b>되었습니다.</p>
+        <p class="col-12 text-center"><b>‘마스크’</b>와 그 동의어들이 <b>제목에 반드시 포함</b>되도록 검색했더니 <b>746개가 검색</b>되었습니다.</p>
         <p class="col-12 text-center">만약 검색결과나 관련없는 특허(노이즈)가 너무 많으면, <b>검색범위를 변경</b>하거나, <b>불필요한 단어를 삭제</b>해서 검색결과를 쉽게 줄일 수 있습니다.</p>
         <div class="col-0 col-lg-1"></div>
         <img class="col-12 col-lg-10" src="img/manual/result.png">
