--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <p class="col-12 text-center pb-3"><b>‘필터에 자석을 포함해서 초미세먼지를 필터링하는 마스크’</b>와 관련된 특허를 찾아보겠습니다.</p>
 
         <h3 class="col-12 text-center pb-2">Step1. 키워드 입력</h3>
-        <p class="col-12 text-center">결합어 사용은 최대한 자제해 주세요.</p>
+        <p class="col-12 text-center"><b>결합어 사용은 최대한 자제</b>해 주세요.</p>
         <div class="col-0 col-lg-3"></div>
         <img class="col-12 col-lg-6" src="img/manual/entering_keywords.png">
         <div class="col-0 col-lg-3"></div>
