--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="col-0 col-lg-3"></div>
 
         <p class="col-12 text-center pt-3 mb-2" style="color: #ff0000;"><b><u>잘못된 예</u></b></p>
-        <p class="col-12 text-center">1태그 = 1단어</p>
+        <p class="col-12 text-center"><b>태그</b> 안에 들어가 있는 문자열은 <b>한 개의 단어</b>로 취급됩니다.</p>
         <p class="col-12 text-center">아래와 같이 입력하면, <b>‘필터에 자석이 포함된 마스크’</b> 등은 비슷해 보이지만 검색되지 않습니다.</p>
         <p class="col-12 text-center">명백하게 위 문장에서 <b>‘자석필터’</b>, <b>‘자석필터마스크’</b> 등과 일치하는 문자열이 존재하지 않기 때문입니다.</p>
 
