--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
     type="text/css">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Gothic+A1|Merriweather+Sans:400,700|Merriweather:400,300,300italic,400italic,700,700italic&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
   <!-- Plugin CSS -->
   <!--<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">-->
@@ -260,7 +258,7 @@
         <p class="col-12 text-center"><b>키프리스</b>는 우리나라 특허청에서 제공하는 특허검색 서비스이고, <b>Google Patents</b>는 구글 검색엔진을 특허DB에 적용한 서비스입니다.</p>
 
         <div class="col-0 col-lg-1"></div>
-        <img class="col-12 col-lg-10" src="img/manual/pre_string.png">
+        <img class="col-12 col-lg-10 mt-3" src="img/manual/pre_string.png">
         <div class="col-0 col-lg-1"></div>
 
         <h3 class="col-12 text-center pt-5 pb-2">Step3. 특허 검색 및 반복</h3>
@@ -268,7 +266,7 @@
         <p class="col-12 text-center"><b>‘마스크’</b>와 그 동의어들이 <b>제목에 반드시 포함</b>되도록 검색했더니 <b>746개가 검색</b>되었습니다.</p>
         <p class="col-12 text-center">만약 검색결과나 관련없는 특허(노이즈)가 너무 많으면, <b>검색범위를 변경</b>하거나, <b>불필요한 단어를 삭제</b>해서 검색결과를 쉽게 줄일 수 있습니다.</p>
         <div class="col-0 col-lg-1"></div>
-        <img class="col-12 col-lg-10" src="img/manual/result.png">
+        <img class="col-12 col-lg-10 mt-3" src="img/manual/result.png">
         <div class="col-0 col-lg-1"></div>
         
 
