--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
         <div class="col-12 col-lg-6 order-1 order-lg-2 py-md-3 px-md-5">
           <h2 class="py-3"><b>‘‘검색 범위를 선택하자.’’</b></h2>
           <div class="px-2">
-            <p><b>검색>요약>청구항</b> 순서로 특허 문서 전체의 내용이 함축되어 있습니다.</p>
-            <p><b>제목</b>(발명의 명칭)은 특허의 카테고리로 볼 수도 있으며, <b>요약</b>에는 구성요소뿐만 아니라 특허의 목적도 포함되어 있을 수 있습니다.</p>
-            <p>필드마다 검색되어야 할 단어를 지정해 주는 것만으로도 <b>정확도를 높이면서 검색량을 줄일 수 있습니다.</b></p>
+            <p><b>검색>요약>청구항</b> 순서로 <ug>특허 문서 전체의 내용이 함축되어 있습니다.</ug></p>
+            <p><b>제목</b>(발명의 명칭)은 <ug>특허의 카테고리</ug>로 볼 수도 있으며, <b>요약</b>에는 <ug>구성요소뿐만 아니라 특허의 목적도 포함</ug>되어 있을 수 있습니다.</p>
+            <p><b>필드마다 검색되어야 할 단어를 지정</b>해 주는 것만으로도 <ug>정확도를 높이면서 검색량을 줄일 수 있습니다.</ug></p>
           </div>
         </div>
 
@@ -204,9 +204,9 @@
           <h2 class="py-3"><b>‘‘숨어 있는 특허를 찾자.’’</b></h2>
           <div class="px-2">
             <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
-            <p>'display'를 어떤 문서에선 '디스플<b>레</b>이'로, 또 어떤 문서에선 '디스플<b>래</b>이'로 표현할 수 있습니다.</p>
-            <p>키프리스에서 "플<b>렉</b>서블 디스플레이"로 검색한 결과와 "플<b>랙</b>서블 디스플레이"로 검색한 결과를 비교해 보세요.</p>
-            <p>아마 검색 <b>결과가 다를 것입니다.</b> 그래서 동의어는 OR 연산자로, 동의어 집합은 AND 연산자로 <b>연결해 주어야 합니다.</b></p>
+            <p><b>'display'</b>를 어떤 문서에선 <ug>'디스플<b>레</b>이'</ug>로, 또 어떤 문서에선 <ug>'디스플<b>래</b>이'</ug>로 표현할 수 있습니다.</p>
+            <p>키프리스에서 <ug>"플<b>렉</b>서블 디스플레이"</ug>로 검색한 결과와 <ug>"플<b>랙</b>서블 디스플레이"</ug>로 검색한 결과를 비교해 보세요.</p>
+            <p>아마 검색 <b>결과가 다를 것입니다.</b> 그래서 동의어는 OR 연산자로, 동의어 집합은 AND 연산자로 <ug>연결해 주어야 합니다.</ug></p>
           </div>
         </div>
         <div class="col-12 col-lg-6 text-center p-3 order-4 row" data-aos="fade-up">
@@ -225,19 +225,19 @@
         <h2 class="col-12 text-center pb-2"><b>‘‘해결책은 CCPatents입니다.’’</b></h2>
         <p class="col-12 text-center pb-3"><b>‘필터에 자석을 포함해서 초미세먼지를 필터링하는 마스크’</b>와 관련된 특허를 찾아보겠습니다.</p>
 
-        <h3 class="col-12 text-center pb-2">Step1. 키워드 입력</h3>
-        <p class="col-12 text-center"><b>결합어 사용은 최대한 자제</b>해 주세요.</p>
+        <h3 class="col-12 text-center pb-2"><u>Step1. 키워드 입력</u></h3>
+        <p class="col-12 text-center"><ug>결합어 사용은 최대한 자제</ug>해 주세요.</p>
         <div class="col-0 col-lg-3"></div>
         <img class="col-12 col-lg-6" src="img/manual/entering_keywords.png">
         <div class="col-0 col-lg-3"></div>
 
-        <p class="col-12 text-center pt-3 mb-2" style="color: #ff0000;"><b><u>잘못된 예</u></b></p>
-        <p class="col-12 text-center"><b>태그</b> 안에 들어가 있는 문자열은 <b>한 개의 단어</b>로 취급됩니다.</p>
-        <p class="col-12 text-center">아래와 같이 입력하면, <b>‘필터에 자석이 포함된 마스크’</b> 등은 비슷해 보이지만 검색되지 않습니다.</p>
-        <p class="col-12 text-center">명백하게 위 문장에서 <b>‘자석필터’</b>, <b>‘자석필터마스크’</b> 등과 일치하는 문자열이 존재하지 않기 때문입니다.</p>
+        <p class="col-12 text-center pt-3 mb-2" style="color: #ff0000;"><ur>잘못된 예</ur></p>
+        <p class="col-12 text-center"><b>태그</b> 안에 들어가 있는 문자열은 <ug>한 개의 단어로 취급됩니다.</ug></p>
+        <p class="col-12 text-center">아래와 같이 입력하면, <b>‘필터에 자석이 포함된 마스크’</b> 등은 <ug>비슷해 보이지만 검색되지 않습니다.</ug></p>
+        <p class="col-12 text-center">명백하게 위 문장에서 <b>‘자석필터’</b>, <b>‘자석필터마스크’</b> 등과 <ug>일치하는 문자열이 존재하지 않기 때문입니다.</ug></p>
 
         <div class="col-0 col-lg-3"></div>
-        <img class="col-12 col-lg-6" src="img/manual/wrong1.png">
+        <img class="col-12 col-lg-6" style="cursor: pointer;" src="img/manual/wrong1.png">
         <div class="col-0 col-lg-3"></div>
 
         <div class="col-0 col-lg-3"></div>
@@ -250,23 +250,23 @@
 
         <h3 class="col-12 text-center pt-5 pb-2">Step2. 검색식 생성</h3>
         <p class="col-12 text-center">돋보기 버튼을 누르면 <b>키워드마다 동의어를 입력할 수 있는 창</b>이 나타납니다.</p>
-        <p class="col-12 text-center">키프리스 동의어 사전을 내장하고 있고, 설정에서 활성화 시킬 수도 있지만, 노이즈가 많아서 추천하지는 않습니다.</p>
-        <p class="col-12 text-center">하지만 <b>직접 추가한 단어(주황색 태그)</b>는 자동으로 기억하고, 다음에 <b>자동으로 검색(파란색 태그)</b>됩니다.</p>
+        <p class="col-12 text-center"><b>키프리스 동의어 사전</b>을 내장하고 있고, 설정에서 활성화 시킬 수도 있지만, <ug>노이즈가 많아서 추천하지는 않습니다.</ug></p>
+        <p class="col-12 text-center">하지만 <b>직접 추가한 단어</b><ug>(주황색 태그)</ug>는 자동으로 기억하고, 다음에 <b>자동으로 검색</b><ug>(파란색 태그)</ug>됩니다.</p>
         <p class="col-12 text-center">그리고 <b>키워드마다 검색범위를 지정</b>할 수 있습니다.</p>
-        <p class="col-12 text-center"><b>전문</b>(전체문서), <b>제목</b>(카테고리), <b>요약</b>(구성요소, 목적), <b>청구항</b>(법으로 보호하는 내용) 중에서 선택해 주세요.</p>
+        <p class="col-12 text-center"><b>전문</b>(전체문서), <b>제목</b>(카테고리), <b>요약</b>(구성요소, 목적), <b>청구항</b>(법으로 보호하는 내용) 중에서 <ug>선택해 주세요.</ug></p>
         <p class="col-12 text-center">마지막으로 <b>특허 검색 사이트</b>를 하고 <b>검색식 생성 버튼</b>을 누르면 검색식이 생성됩니다.</p>
-        <p class="col-12 text-center"><b>키프리스</b>는 우리나라 특허청에서 제공하는 특허검색 서비스이고, <b>Google Patents</b>는 구글 검색엔진을 특허DB에 적용한 서비스입니다.</p>
+        <p class="col-12 text-center"><b>키프리스</b>는 <ug>우리나라 특허청에서 제공하는 특허검색 서비스</ug>이고, <b>Google Patents</b>는 <ug>구글 검색엔진을 특허DB에 적용한 서비스</ug>입니다.</p>
 
         <div class="col-0 col-lg-1"></div>
-        <img class="col-12 col-lg-10 mt-3" src="img/manual/pre_string.png">
+        <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/pre_string.png">
         <div class="col-0 col-lg-1"></div>
 
         <h3 class="col-12 text-center pt-5 pb-2">Step3. 특허 검색 및 반복</h3>
-        <p class="col-12 text-center"><b>특허 검색 버튼</b>을 누르면 선택한 사이트로 검색식을 전달하고, <b>즉시 검색결과를 표시</b>해 줍니다.</p>
+        <p class="col-12 text-center"><b>특허 검색 버튼</b>을 누르면 선택한 사이트로 검색식을 전달하고, <ug>즉시 검색결과를 표시해 줍니다.</ug></p>
         <p class="col-12 text-center"><b>‘마스크’</b>와 그 동의어들이 <b>제목에 반드시 포함</b>되도록 검색했더니 <b>746개가 검색</b>되었습니다.</p>
-        <p class="col-12 text-center">만약 검색결과나 관련없는 특허(노이즈)가 너무 많으면, <b>검색범위를 변경</b>하거나, <b>불필요한 단어를 삭제</b>해서 검색결과를 쉽게 줄일 수 있습니다.</p>
+        <p class="col-12 text-center"><ug>만약 검색결과나 관련없는 특허(노이즈)가 너무 많으면,</ug> <b>검색범위를 변경</b>하거나, <b>불필요한 단어를 삭제</b>해서 <ug>검색결과를 쉽게 줄일 수 있습니다.</ug></p>
         <div class="col-0 col-lg-1"></div>
-        <img class="col-12 col-lg-10 mt-3" src="img/manual/result.png">
+        <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/result.png">
         <div class="col-0 col-lg-1"></div>
         
 
@@ -290,8 +290,8 @@
           <p id="win10_warn" style="display: none;">
             윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
           </p>
-          <p><b>마이크로소프트 스토어</b>를 통해 안전하게 설치됩니다.</p>
-          <p class="pb-3">로그인 창이 뜨지만 그냥 닫아도 설치가 진행됩니다.</p>
+          <p><b>마이크로소프트 스토어</b>를 통해 <ug>안전하게 설치됩니다.</ug></p>
+          <p class="pb-3"><b>로그인 창</b>이 뜨지만 <ug>그냥 닫아도 설치가 진행됩니다.</ug></p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
           <div id="store-area2" class="row" data-aos="zoom-in">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
@@ -376,7 +376,7 @@
     AOS.init();
   </script>
   <!--<script data-cfasync="false" src="js/form-submission-handler.min.js"></script>-->
-  <!--<script src="js/jquery.popupimg.min.js"></script>-->
+  <script src="js/jquery.popupimg.min.js"></script>
   <!--<script src="js/native-toast.min.js"></script>-->
   <!--<script src="js/jquery.da-share.min.js"></script>-->
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
