--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="row no-gutters py-4">
 
         <h2 class="col-12 text-center pb-2"><b>‘‘해결책은 CCPatents입니다.’’</b></h2>
-        <p class="col-12 text-center pb-3"><b>‘필터에 자석을 포함해서 초미세먼지를 필터링하는 마스크’</b>와 관련된 특허를 찾아보겠습니다.</p>
+        <p class="col-12 text-center pb-3"><b>‘필터에 자석을 포함해서 초미세먼지를 필터링하는 마스크’</b>와 <ug>관련된 특허</ug>를 찾아보겠습니다.</p>
 
         <h3 class="col-12 text-center pb-2"><u>Step1. 키워드 입력</u></h3>
         <p class="col-12 text-center"><ug>결합어 사용은 최대한 자제</ug>해 주세요.</p>
