--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <img class="col-12 col-lg-6" src="img/manual/wrong3.png">
         <div class="col-0 col-lg-3"></div>
 
-        <h3 class="col-12 text-center pt-5 pb-2">Step2. 검색식 생성</h3>
+        <h3 class="col-12 text-center pt-5 pb-2"><u>Step2. 검색식 생성</u></h3>
         <p class="col-12 text-center">돋보기 버튼을 누르면 <b>키워드마다 동의어를 입력할 수 있는 창</b>이 나타납니다.</p>
         <p class="col-12 text-center"><b>키프리스 동의어 사전</b>을 내장하고 있고, 설정에서 활성화 시킬 수도 있지만, <ug>노이즈가 많아서 추천하지는 않습니다.</ug></p>
         <p class="col-12 text-center">하지만 <b>직접 추가한 단어</b><ug>(주황색 태그)</ug>는 자동으로 기억하고, 다음에 <b>자동으로 검색</b><ug>(파란색 태그)</ug>됩니다.</p>
@@ -261,7 +261,7 @@
         <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/pre_string.png">
         <div class="col-0 col-lg-1"></div>
 
-        <h3 class="col-12 text-center pt-5 pb-2">Step3. 특허 검색 및 반복</h3>
+        <h3 class="col-12 text-center pt-5 pb-2"><u>Step3. 특허 검색 및 반복</u></h3>
         <p class="col-12 text-center"><b>특허 검색 버튼</b>을 누르면 선택한 사이트로 검색식을 전달하고, <ug>즉시 검색결과를 표시해 줍니다.</ug></p>
         <p class="col-12 text-center"><b>‘마스크’</b>와 그 동의어들이 <b>제목에 반드시 포함</b>되도록 검색했더니 <b>746개가 검색</b>되었습니다.</p>
         <p class="col-12 text-center"><ug>만약 검색결과나 관련없는 특허(노이즈)가 너무 많으면,</ug> <b>검색범위를 변경</b>하거나, <b>불필요한 단어를 삭제</b>해서 <ug>검색결과를 쉽게 줄일 수 있습니다.</ug></p>
