--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
         <div class="col-0 col-lg-1"></div>
         <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/pre_string.png">
         <div class="col-0 col-lg-1"></div>
+        <div class="col-0 col-lg-1"></div>
+        <div class="col-12 col-lg-11">※ 클릭하면 확대됩니다.</div>
 
         <h3 class="col-12 text-center pt-5 pb-2"><u>Step3. 특허 검색 및 반복</u></h3>
         <p class="col-12 text-center"><b>특허 검색 버튼</b>을 누르면 선택한 사이트로 검색식을 전달하고, <ug>즉시 검색결과를 표시해 줍니다.</ug></p>
@@ -268,6 +270,8 @@
         <div class="col-0 col-lg-1"></div>
         <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/result.png">
         <div class="col-0 col-lg-1"></div>
+        <div class="col-0 col-lg-1"></div>
+        <div class="col-12 col-lg-11">※ 클릭하면 확대됩니다.</div>
         
 
       </div>
