--- a/index.html
+++ b/index.html
@@ -282,15 +282,15 @@
   <section id="install" class="bg-light">
     <div class="container-fluid page-section bg-light">
       <div class="row no-gutters p-3 p-md-5" data-aos="fade-up">
-        <div class="col-lg-5 order-2 order-lg-1">
+        <div class="col-12 col-lg-4 col-xl-5 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
               frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
         </div>
-        <div class="col-lg-7 px-3 px-lg-4 order-1 order-lg-2">
-          <h2 class="py-3"><b>‘‘마이크로소프트 계정이 없어도 설치할 수 있습니다.’’</b></h2>
+        <div class="col-12 col-lg-8 col-xl-7 px-3 px-lg-4 order-1 order-lg-2">
+          <h2 class="pb-3"><b>‘‘마이크로소프트 계정이 없어도 설치할 수 있습니다.’’</b></h2>
           <p id="win10_warn" style="display: none;">
             윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
           </p>
@@ -299,8 +299,8 @@
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
           <div id="store-area2" class="row" data-aos="zoom-in">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
-              href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img class="img-fluid" width="100%"
-                src="https://1.bp.blogspot.com/-0rhURw5cj9s/Xf2BfUsqYEI/AAAAAAAAHl4/tfGMocdsrWQ1aMD6u_nQaRS2BqmbCQA9gCLcBGAsYHQ/s1600/store_ko2.png"
+              href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img class="img-fluid"
+                src="img/store_ko3.png"
                 alt="다운로드 버튼"></a>
           </div>
 
