--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <!--Why Section-->
   <section id="why">
-    <div class="container-fluid py-5 bg-light" data-aos="fade-up">
+    <div class="container-fluid py-5" data-aos="fade-up">
       <div class="row px-3">
         <div class="col-12 text-center">
           <h2>‘‘특허 검색 결과가 너무 많나요?’’</h2>
@@ -182,8 +182,8 @@
   </section>
 
   <!-- Patent Search section -->
-  <section id="patent_search" class="bg-white">
-    <div class="container py-4 bg-white">
+  <section id="patent_search" class="bg-light">
+    <div class="container py-4 bg-light">
 
       <div class="row no-gutters py-4">
 
