--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@
   <!-- Install Section -->
   <section id="install" class="bg-light">
     <div class="container-fluid page-section bg-light">
-      <div class="row no-gutters p-3 p-md-5" data-aos="fade-up">
-        <div class="col-12 col-lg-4 col-xl-5 order-2 order-lg-1">
+      <div class="row no-gutters py-3 px-0  py-md-5 px-md-0" data-aos="fade-up">
+        <div class="col-12 col-lg-6 col-xl-5 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
               frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
         </div>
-        <div class="col-12 col-lg-8 col-xl-7 px-3 px-lg-4 order-1 order-lg-2">
+        <div class="col-12 col-lg-6 col-xl-7 px-3 px-lg-4 order-1 order-lg-2">
           <h2 class="pb-3"><b>‘‘마이크로소프트 계정이 없어도 설치할 수 있습니다.’’</b></h2>
           <p id="win10_warn" style="display: none;">
             윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
