--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
       <div class="row px-3">
         <div class="col-12 text-center">
           <h2>‘‘특허 검색 결과가 너무 많나요?’’</h2>
-          <p>요약, 청구항 같은 <b>필드만 지정</b>해 주어도 <b>검색량을 확~ 줄일 수 있습니다.</b></p>
-          <p><b>동의어를 입력</b>해 주면 검색 <b>범위를 넓힐 수 있습니다.</b></p>
-          <p>동의어를 연결하고, 필드를 지정해 주는 것은 <b>상당히 피곤한 작업입니다.</b></p>
+          <p>요약, 청구항 같은 <b>필드만 지정</b>해 주어도 <ug>검색량을 확~ 줄일 수 있습니다.</ug></p>
+          <p><b>동의어를 입력</b>해 주면 검색 <ug>범위를 넓힐 수 있습니다.</ug></p>
+          <p>동의어를 연결하고, 필드를 지정해 주는 것은 <ug>상당히 피곤한 작업입니다.</ug></p>
           <p><b>CCPatents는 이 문제를 단순하게 해결했습니다.</b></p>
         </div>
       </div>
@@ -192,7 +192,7 @@
           <img class="col-12 col-sm-8 col-lg-12" src="../img/patent_search/application2.png" alt="특허 명세서">
         </div>
         <div class="col-12 col-lg-6 order-1 order-lg-2 py-md-3 px-md-5">
-          <h2 class="py-3"><b>‘‘검색 범위를 선택하자.’’</b></h2>
+          <h2 class="py-3">‘‘검색 범위를 선택하자.’’</h2>
           <div class="px-2">
             <p><b>검색>요약>청구항</b> 순서로 <ug>특허 문서 전체의 내용이 함축되어 있습니다.</ug></p>
             <p><b>제목</b>(발명의 명칭)은 <ug>특허의 카테고리</ug>로 볼 수도 있으며, <b>요약</b>에는 <ug>구성요소뿐만 아니라 특허의 목적도 포함</ug>되어 있을 수 있습니다.</p>
@@ -201,7 +201,7 @@
         </div>
 
         <div class="col-12 col-lg-6 order-3 pt-5 py-md-3 px-md-5">
-          <h2 class="py-3"><b>‘‘숨어 있는 특허를 찾자.’’</b></h2>
+          <h2 class="py-3">‘‘숨어 있는 특허를 찾자.’’</h2>
           <div class="px-2">
             <p>특허 문서마다 표현하는 방식이 다릅니다.</p>
             <p><b>'display'</b>를 어떤 문서에선 <ug>'디스플<b>레</b>이'</ug>로, 또 어떤 문서에선 <ug>'디스플<b>래</b>이'</ug>로 표현할 수 있습니다.</p>
@@ -222,7 +222,7 @@
     <div class="container py-4 bg-white">
       <div class="row no-gutters py-4">
 
-        <h2 class="col-12 text-center pb-2"><b>‘‘해결책은 CCPatents입니다.’’</b></h2>
+        <h2 class="col-12 text-center pb-2">‘‘해결책은 CCPatents입니다.’’</h2>
         <p class="col-12 text-center pb-3"><b>‘필터에 자석을 포함해서 초미세먼지를 필터링하는 마스크’</b>와 <ug>관련된 특허</ug>를 찾아보겠습니다.</p>
 
         <h3 class="col-12 text-center pb-2"><u>Step1. 키워드 입력</u></h3>
