--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <h3 class="col-12 text-center pt-5 pb-2"><u>Step2. 검색식 생성</u></h3>
         <p class="col-12 text-center">돋보기 버튼을 누르면 <b>키워드마다 동의어를 입력할 수 있는 창</b>이 나타납니다.</p>
         <p class="col-12 text-center"><b>키프리스 동의어 사전</b>을 내장하고 있고, 설정에서 활성화 시킬 수도 있지만, <ug>노이즈가 많아서 추천하지는 않습니다.</ug></p>
-        <p class="col-12 text-center">하지만 <b>직접 추가한 단어</b><ug>(주황색 태그)</ug>는 자동으로 기억하고, 다음에 <b>자동으로 검색</b><ug>(파란색 태그)</ug>됩니다.</p>
+        <p class="col-12 text-center">하지만 <b>직접 추가한 단어</b>(<ug>주황색 태그</ug>)는 자동으로 기억하고, 다음에 <b>자동으로 검색</b>(<ug>파란색 태그</ug>)됩니다.</p>
         <p class="col-12 text-center">그리고 <b>키워드마다 검색범위를 지정</b>할 수 있습니다.</p>
         <p class="col-12 text-center"><b>전문</b>(전체문서), <b>제목</b>(카테고리), <b>요약</b>(구성요소, 목적), <b>청구항</b>(법으로 보호하는 내용) 중에서 <ug>선택해 주세요.</ug></p>
         <p class="col-12 text-center">마지막으로 <b>특허 검색 사이트</b>를 하고 <b>검색식 생성 버튼</b>을 누르면 검색식이 생성됩니다.</p>
