--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </div>
 
           <div class="usecase" style="position: absolute; bottom: 30px; left: 20px; z-index: 100;">
-            <a class="usecase-item usecase-item-blue" style="font-size: 11pt;" data-aos="fade-right" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank"><b>'자석 필터 마스크'</b> 특허 검색 따라하기</a>
+            <a class="usecase-item usecase-item-blue" style="font-size: 11pt;" data-aos="fade-right" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221802788410" target="_blank">'자석 필터 마스크' 특허 검색 따라하기</a>
             <a class="usecase-item usecase-item-blue" style="font-size: 10pt;" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221680490250" target="_blank">Google Patents, 구글 검색엔진을 특허에 적용!</a>
             <a class="usecase-item usecase-item-blue" style="font-size: 13pt;" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="750" href="https://blog.naver.com/ccpatents/221682474929" target="_blank">키프리스 vs Google Patents</a>
           </div>
