--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <div class="col-12 col-lg-6 col-xl-7 px-3 px-lg-4 order-1 order-lg-2">
           <h2 class="pb-3"><b>‘‘마이크로소프트 계정이 없어도 설치할 수 있습니다.’’</b></h2>
           <p id="win10_warn" style="display: none;">
-            윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.
+            <b>윈도우10 전용 프로그램</b>입니다. <ug>윈도우10에서 스토어 버튼이 나타납니다.</ug>
           </p>
           <p><b>마이크로소프트 스토어</b>를 통해 <ug>안전하게 설치됩니다.</ug></p>
           <p class="pb-3"><b>로그인 창</b>이 뜨지만 <ug>그냥 닫아도 설치가 진행됩니다.</ug></p>
