--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
     </div>
   </nav>
 
+  <div id="store-area3" style="position: fixed; bottom: 45px; right: 45px; width: 75px; display: none;">
+    <a id="store-button3" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;">
+      <img src="img/store_ko3.png" width="100%">
+    </a>
+    
+  </div>
+  
+
   <!-- Masthead -->
   <header class="masthead">
     <div class="overlay"></div>
@@ -126,7 +134,7 @@
               data-aos="zoom-in">
               <div class="img-hover-container" style="width: 200px;">
                 <img
-                  src="https://1.bp.blogspot.com/-OcTM0sQ-P3Q/Xf2BfsK5A0I/AAAAAAAAHl8/n0jqczizugQFFxLyr6VmVPC_qHaIzml9gCLcBGAsYHQ/s1600/store_ko.png"
+                  src="img/store_ko.png"
                   alt="다운로드 버튼" class="img-hover-image">
                 <div class="img-hover-overlay">
                   <div class="img-hover-text">마이크로소프트 계정 No !!<br>로그인창 무시</div>
@@ -300,7 +308,7 @@
           <div id="store-area2" class="row" data-aos="zoom-in">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
               href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img class="img-fluid"
-                src="img/store_ko3.png"
+                src="img/store_ko2.png"
                 alt="다운로드 버튼"></a>
           </div>
 
