--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
 
     <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="http://video_ko.ccpatents.net/bg4.mp4" type="video/mp4">
+      <source src="https://ccpatents.github.io/video_ko/bg.mp4" type="video/mp4">
     </video>
   </header>
 
