--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.2/assets/owl.theme.green.min.css" />-->
   <link rel="stylesheet" href="css/aos.css">
   <!--<link href="css/native-toast.min.css" rel="stylesheet">-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet" />
+  <!--Popup Lightbox CSS-->
+  <link href="css/popup-lightbox.min.css" rel="stylesheet" />
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
@@ -109,7 +112,14 @@
     <a id="store-button3" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;">
       <img src="img/store_ko3.png" width="100%">
     </a>
-    
+  </div>
+
+  <div id="addon-area" class="img-container" style="position: fixed; bottom: 45px; left: 30px; display: none;">
+    <img src="img/addon/1.png" alt="검색기록" />
+    <img src="img/addon/2.png" alt="검색기록마다 메모 및 평가를할 수 있습니다."/>
+    <img src="img/addon/3.png" alt="키프리스 특허, 상표뿐만 아니라 구글 특허, USPTO, J-PlatPat 등 다양한 특허 검색 사이트를 지원합니다."/>
+    <img src="img/addon/4.png" alt="직접 추가한 단어는 '나의 동의어 사전'에 저장됩니다." />
+    <img src="img/addon/5.png" alt="직접 추가한 단어는 '나의 동의어 사전'에 저장됩니다." />
   </div>
   
 
@@ -391,6 +401,7 @@
   <!--<script src="js/native-toast.min.js"></script>-->
   <!--<script src="js/jquery.da-share.min.js"></script>-->
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+  <script src="js/jquery.popup.lightbox.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <!--<script src="js/creative.js" type="text/babel" data-presets="es2015,stage-2"></script>-->
