--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
   <script src="js/jquery.popupimg.min.js"></script>
   <!--<script src="js/native-toast.min.js"></script>-->
   <!--<script src="js/jquery.da-share.min.js"></script>-->
-  <!--<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>-->
+  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
   <script src="js/jquery.popup.lightbox.min.js"></script>
 
   <!-- Custom scripts for this template -->
