--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <div id="addon-area" class="img-container" style="position: fixed; bottom: 45px; left: 30px; display: none;">
     <img src="img/addon/1.png"  alt="검색기록" />
-    <img src="img/addon/2.png" alt="검색기록마다 메모 및 평가를할 수 있습니다."/>
+    <img src="img/addon/2.png" alt="검색기록마다 메모와 평가를 할 수 있습니다."/>
     <img src="img/addon/3.png" alt="키프리스 특허, 상표뿐만 아니라 구글 특허, USPTO, J-PlatPat 등 다양한 특허 검색 사이트를 지원합니다."/>
     <img src="img/addon/4.png" alt="직접 추가한 단어는 '나의 동의어 사전'에 저장됩니다." />
     <img src="img/addon/5.png" alt="직접 추가한 단어는 '나의 동의어 사전'에 저장됩니다." />
