--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <p class="col-12 text-center">하지만 <b>직접 추가한 단어</b>(<ug>주황색 태그</ug>)는 자동으로 기억하고, 다음에 <b>자동으로 검색</b>(<ug>파란색 태그</ug>)됩니다.</p>
         <p class="col-12 text-center">그리고 <b>키워드마다 검색범위를 지정</b>할 수 있습니다.</p>
         <p class="col-12 text-center"><b>전문</b>(전체문서), <b>제목</b>(카테고리), <b>요약</b>(구성요소, 목적), <b>청구항</b>(법으로 보호하는 내용) 중에서 <ug>선택해 주세요.</ug></p>
-        <p class="col-12 text-center">마지막으로 <b>특허 검색 사이트</b>를 하고 <b>검색식 생성 버튼</b>을 누르면 검색식이 생성됩니다.</p>
+        <p class="col-12 text-center">마지막으로 <b>특허 검색 사이트를 선택</b>하고 <b>검색식 생성 버튼</b>을 누르면 검색식이 생성됩니다.</p>
         <p class="col-12 text-center"><b>키프리스</b>는 <ug>우리나라 특허청에서 제공하는 특허검색 서비스</ug>이고, <b>Google Patents</b>는 <ug>구글 검색엔진을 특허DB에 적용한 서비스</ug>입니다.</p>
 
         <div class="col-0 col-lg-1"></div>
