--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         <div class="col-12 col-lg-6 text-center p-3 order-2 order-lg-1 row d-flex align-items-center" data-aos="fade-up">
           <div class="col-0 col-sm-2 col-lg-0"></div>
-          <img class="col-12 col-sm-8 col-lg-12" src="../img/patent_search/application2.png" alt="특허 명세서">
+          <img class="col-12 col-sm-8 col-lg-12" src="/img/patent_search/application2.png" alt="특허 명세서">
         </div>
         <div class="col-12 col-lg-6 order-1 order-lg-2 py-md-3 px-md-5">
           <h2 class="py-3">‘‘검색 범위를 선택하자.’’</h2>
