--- a/index.html
+++ b/index.html
@@ -276,20 +276,20 @@
         <p class="col-12 text-center"><b>키프리스</b>는 <ug>우리나라 특허청에서 제공하는 특허검색 서비스</ug>이고, <b>Google Patents</b>는 <ug>구글 검색엔진을 특허DB에 적용한 서비스</ug>입니다.</p>
 
         <div class="col-0 col-lg-1"></div>
-        <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/pre_string.png">
+        <img class="col-12 col-lg-10 mt-3 popup-img screen_border" style="cursor: pointer;" src="img/manual/pre_string.png">
         <div class="col-0 col-lg-1"></div>
         <div class="col-0 col-lg-1"></div>
-        <div class="col-12 col-lg-11">※ 클릭하면 확대됩니다.</div>
+        <div class="col-12 col-lg-11 d-none d-lg-block">※ 클릭하면 확대됩니다.</div>
 
         <h3 class="col-12 text-center pt-5 pb-2"><u>Step3. 특허 검색 및 반복</u></h3>
         <p class="col-12 text-center"><b>특허 검색 버튼</b>을 누르면 선택한 사이트로 검색식을 전달하고, <ug>즉시 검색결과를 표시해 줍니다.</ug></p>
         <p class="col-12 text-center"><b>‘마스크’</b>와 그 동의어들이 <b>제목에 반드시 포함</b>되도록 검색했더니 <b>746개가 검색</b>되었습니다.</p>
         <p class="col-12 text-center"><ug>만약 검색결과나 관련없는 특허(노이즈)가 너무 많으면,</ug> <b>검색범위를 변경</b>하거나, <b>불필요한 단어를 삭제</b>해서 <ug>검색결과를 쉽게 줄일 수 있습니다.</ug></p>
         <div class="col-0 col-lg-1"></div>
-        <img class="col-12 col-lg-10 mt-3 popup-img" style="cursor: pointer;" src="img/manual/result.png">
+        <img class="col-12 col-lg-10 mt-3 popup-img screen_border" style="cursor: pointer;" src="img/manual/result.png">
         <div class="col-0 col-lg-1"></div>
         <div class="col-0 col-lg-1"></div>
-        <div class="col-12 col-lg-11">※ 클릭하면 확대됩니다.</div>
+        <div class="col-12 col-lg-11 d-none d-lg-block">※ 클릭하면 확대됩니다.</div>
         
 
       </div>
