--- a/simple/index.html
+++ b/simple/index.html
@@ -1,1 +1,13 @@
-안녕하세요.
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+    <link href="style.css" rel="stylesheet">
+</head>
+<body>
+    <section id="section1" class="section"><a href="#section2" class="scroll">이동</a>안녕하세요.</section>
+    <section id="section2" class="section">반갑습니다.</section>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+</body>
